--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+*{
+  padding: 0px;
+  margin: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  background-color: rgb(43, 43, 72);
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.passwordBox{
+  width: 350px;
+ 
+  padding: 20px;
+  background-color: rgb(78, 36, 117);
+}
+
+.passwordBox h2{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.passwordBoxin{
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.passwordBoxin input{
+  flex-basis: 80%;
+}
+
+.passwordBoxin button{
+  flex-basis: 20%;
+  padding: 10px 0px;
+}
+.passLength{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+}
+
+.passLength input{
+  width: 60px;
+  padding: 10px 0px;
+  outline: none;
+}
+
+.btn{
+  padding: 10px 0px;
+  width: 100%;
 }
